--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>es.sauces</groupId>
-    <artifactId>AppNominas</artifactId>
+    <artifactId>AppNominasMVC</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <exec.mainClass>es.sauces.appnominas.AppNominas</exec.mainClass>
+        <exec.mainClass>es.sauces.appnominas.AppNominasMVC</exec.mainClass>
     </properties>
     <name>AppNominas</name>
     <dependencies>
@@ -30,7 +30,13 @@
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
             <version>1.4.20</version>
-        </dependency>       
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -47,7 +53,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        es.sauces.appnominas.AppNominas
+                                        es.sauces.appnominas.AppNominasMVC
                                     </mainClass>
                                 </manifest>
                             </archive>
